# music-chat-tracker

./: .env  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  message_exporter.rs  mock.env  playlist-updater.ipynb  playlist-updater.py  requirements.txt
.github/workflows/: ci.yml
message-exporter/: BUILD.bazel  Cargo.toml
messages-scraper/: Cargo.toml
messages-scraper/src/: lib.rs
music_chat_exports/: README.md
playlist-builder/: BUILD.bazel  Cargo.toml
playlist-handler/: Cargo.toml
playlist-handler/src/: lib.rs
src/: main.rs  messages_exporter.rs  messages_scraper.rs  playlist_handler.rs
