[package]
name = "music-chat-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.11.0"
chrono = "0.4"
regex = "1.5"
scraper = "0.13"
tempfile = "3.10.1"
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
tokio = { version = "1", features = ["full"] }