[package]
name = "messages_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
select = "0.5"
regex = "1.5"
scraper = "0.13"
